# spki_openssl

./: .gitignore  README.md  pyproject.toml
bash/: README.md  spki_openssl.sh
notebook/: README.md  badssl.ipynb  openssl.ipynb
