[tool.poetry]
name = "spki_openssl"
version = "0.1.0"
description = "spki_openssl, Juypter Notebook research of X.509 SubjectPublicKeyInfo"
authors = ["Jason Link <jsn.link@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
